--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -1,8 +1,3 @@
-// header
-//   headGr
-//   text-shadow 0 1px 0 #fff
-//   padding step
-
 .nav
   position: relative
   display: inline-block
@@ -41,8 +36,7 @@ input[type="radio"]
     btnGrHov()
     text-shadow 0 -1px 0 #fff
 
-
-button, [type="checkbox"], [type="radio"]
+button, [type="radio"]
   &:focus
     btnGrHov()
     text-shadow 0 -1px 0 #fff
