--- a/styles/utils.styl
+++ b/styles/utils.styl
@@ -22,6 +22,9 @@ btnGr(clr = #fff)
 btnGrHov(clr = #fff)
   background darken(clr, 10) linear-gradient(darken(clr, 10), clr) repeat-x
 
+inputStyle(type= none)
+  -webkit-appearance: type
+
 lh(h = (step*2))
   line-height h
 
