can remove nodes

--- a/styles/bookmarks.styl
+++ b/styles/bookmarks.styl
@@ -56,7 +56,7 @@ itemColor = teal
 
     w = (step/8)
     padding 0 imp()
-    background brdClr imp()
+    background brdClr
     outline none
     margin step 0
     rd()
@@ -79,6 +79,7 @@ itemColor = teal
       position absolute
       top w
       bottom w
+
       &:first-child
         radiusLeft()
         left w
