--- a/styles/main.styl
+++ b/styles/main.styl
@@ -38,6 +38,13 @@ header
   margin-left sidebarWidth
   box-shadow 0 1px 0 #bbb, 0 2px 0 #fff
 
+#editPopup
+  center(512px,256px)
+  rd(5px)
+  background #fff
+  padding 16px
+  box-shadow 0 1px 3px rgba(0, 0, 0, 0.5)
+
 
 @import 'nav'
-@import 'bookmarks'
+@import 'tree'
