--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ html
     title Bookmark Manager
     link(rel="stylesheet", href="css/main.css")
 
-  body
+  body.dev
 
     header
       section.ico.nav.search
