--- a/styles/reset.styl
+++ b/styles/reset.styl
@@ -1,30 +1,18 @@
-html
-  font-size: 100%
-  -webkit-text-size-adjust: 100%
+// html
+//   font-size: 100%
+//   -webkit-text-size-adjust: 100%
 
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
   display: block
-  padding: 0
-  margin: 0
-  box-sizing: border-box
 
-html,body,input,select,ol,li,ul,label,form,h1,h2,h3,h4,h5,h6
+html,body,input,button,select,ol,li,ul,label,form,h1,h2,h3,h4,h5,h6
   padding: 0
   margin: 0
-  box-sizing: border-box
 ol, li, ul
-  box-sizing border-box
   list-style none
 
 html,button,input,select,textarea
-
-  font-family sans-serif
-  box-sizing border-box
-
-button,input,select
-  outline none
-  font-family sans-serif
-  box-sizing border-box
+  font-family: sans-serif
 
 [hidden]
   display none
@@ -34,37 +22,12 @@ button,input,select
   user-select none
   cursor move
 
-code, kbd, pre, samp
-  font 1em/1.4 monospace, serif
+a,button,input,select
+  outline: none
+  box-sizing: border-box
+  border: none
 
 a, button, [type="radio"], [type="checkbox"]
-  text-decoration none
   cursor pointer
-  outline none
-
-// .tabbed
-//   border-radius 5px
-
-//   nav
-//     @extend .head
-//     a
-//       display inline-block
-//       padding: (step/2)
-//   .tabs
-//     position relative
-//     .tab
-//       position absolute
-//       width 100%
-//       opacity 0
-//       transition opacity .4s linear
-//       p
-//         line-height (step*2)
-//         margin 0
-//         padding 0 step
-//         box-shadow 0 1px 0 #f0f0f0
-//       i
-//         display inline-block
-//         width 50px
-//       &:target
-//         opacity 1
-//         z-index 1
+a
+  text-decoration none
