color selection module

--- a/styles/icons.styl
+++ b/styles/icons.styl
@@ -51,3 +51,11 @@ iconFont('../css/font', 'fontello')
   &:checked
     &:before
       content: '\e894'
+
+.kids-0 > .ico.dir
+  &:before
+    content: '\e83e'
+  &:checked
+    &:before
+      content: '\e83e'
+
