--- a/styles/reset.styl
+++ b/styles/reset.styl
@@ -22,7 +22,7 @@ html,button,input,select,textarea
   user-select none
   cursor move
 
-a,button,input,select
+a,button,input,select,output
   outline: none
   box-sizing: border-box
   border: none
