--- a/styles/utils/shortcuts.styl
+++ b/styles/utils/shortcuts.styl
@@ -7,7 +7,7 @@ brd()
 shd = brd
 
 //////////////////////////////////////////////////
-inputStyle(type='none')
+appearance(type='none')
   -webkit-appearance: unquote(type)
 
 //////////////////////////////////////////////////
@@ -54,4 +54,9 @@ circle()
   margin: 0 0 step step
 
 ///////////////////////////////// Gr
+
+rhytmGr()
+  background: bgClr linear-gradient(0deg, #fff 50%, transparent 50%, transparent) repeat-y;
+  background-size: 100% sz(2,'*')
+
 
