--- a/styles/utils/buttons.styl
+++ b/styles/utils/buttons.styl
@@ -1,6 +1,7 @@
 btn(bg=btnBgClr, clr=btnClr, h=sz(2,'*'))
 
-  inputStyle('button')
+  appearance('none')
+  border-radius:0
   display: inline-block
   padding: 0 sz(2)
   text-align: center
