--- a/styles/utils/positions.styl
+++ b/styles/utils/positions.styl
@@ -5,12 +5,12 @@ posall(n)
   bottom n
   left n
 
-center(w,h)
-  width w
-  height h
-  position absolute
-  top 50%
-  left 50%
-  margin-top (h/-2)
-  margin-left (w/-2)
+// center(w,h)
+//   width w
+//   height h
+//   position absolute
+//   top 50%
+//   left 50%
+//   margin-top (h/-2)
+//   margin-left (w/-2)
 
