--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
 
   body
 
-    header
+    header.flex
       section.ico.nav.search
         form.btn-group
           input(id="search", type="text", placeholder="placeholder")
