--- a/styles/utils.styl
+++ b/styles/utils.styl
@@ -1,5 +1,7 @@
 @import 'utils/vars'
 @import 'utils/shortcuts'
 @import 'utils/functions'
+@import 'utils/colors'
 @import 'utils/buttons'
+@import 'utils/positions'
 
