--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -1,11 +1,7 @@
-
-.flex
-  display flex
-  .nav
-    flex 1
-    position: relative
-    padding step
-    box-shadow: 1px 0 0 brdClr;
+.nav
+  position: relative
+  padding step
+  box-shadow 1px 0 0 lighten(brdClr,20)
 
 form.hslColors
   rd()
